syntax = "proto3";

package go.micro.service.m3o.secret;

service SecretService {
  rpc Create(CreateRequest) returns (CreateResponse) {};
}

message CreateRequest {
  string namespace = 1;
  string token = 2;
}

message CreateResponse {}